feat: bind training sessions to knowledge points